--- a/www/jss/style.css
+++ b/www/jss/style.css
@@ -1,3 +1,34 @@
+@keyframes myfirst
+{
+0%   {background: grey}
+25%  {background: yellow;}
+50%  {background: blue;}
+100% {background: green;}
+}
+
+@-webkit-keyframes myfirst /* Safari and Chrome */
+{
+0%   {background: red;}
+25%  {background: yellow;}
+50%  {background: blue;}
+100% {background: green;}
+}
+@keyframes myfirsth2
+{
+0%   {background: yellow;}
+25%  {background: red;}
+50%  {background: green;}
+100% {background: blue;}
+}
+
+@-webkit-keyframes myfirst /* Safari and Chrome */
+{
+0%   {background: yellow;}
+25%  {background: red;}
+50%  {background: green;}
+100% {background: blue;}
+}
+
 body {
     font-family: 'arial';
     font-size:  1.2em;    
@@ -10,10 +41,9 @@ body {
 }
 
 a{
-    text-decoration: none;      
-}
-
-.clear{
+    text-decoration:  none;  
+    }
+a .clear{
     clear: both;  
 }
 .wrapper{
@@ -21,31 +51,38 @@ a{
     display:  block;    
     position: static;
 }
-#header{
+header{
     display: block;
     width: 980px;   
     margin: 0 auto;   
 }
-#header img{
-     float: left;
+header img{
+     float: left;   
+     -webkit-transform: rotate(30deg);     
 }
-#header .titre{
+header .titre{
     float: left; 
 }
-#header h1{
+header h1{
     margin: 0;
     padding: 0;
-    color:  darkorchid
+    color:  darkorchid;
+   animation:myfirst 5s;
+   -webkit-animation:myfirst 5s;
 }
-#header h2{
+
+header h2{
     margin: 0;
     padding: 0;
     color:  magenta
+    animation:myfirsth2 10s;
+   -webkit-animation:myfirsth2 10s;
 }
 #menu{
     display: block;
     width: 980px;    
     margin: 0 auto;
+    text-shadow:0.1em 0.1em #333
    
 }
 #menu ul{
@@ -55,11 +92,16 @@ a{
 #menu li{
     width: 25%;
     float:  left;
-    background-color: #333;      
+    background-color:#e4e4e4 ;      
+}     
+#menu li:hover{
+    transform:rotate(7deg);
+-ms-transform:rotate(7deg); /* IE 9 */
+-webkit-transform:rotate(7deg); /* Safari and Chrome */
+ text-shadow:0.5em 0.5em #333
 }     
 #menu li a:hover{
-    color: #440514
-
+    color: #440514;
 }
 #content{
     display: block;
@@ -67,25 +109,25 @@ a{
     margin: 0 auto;   
    
 }
-#footer{
+footer{
     display: block;
     width: 980px;    
     margin: 0 auto;  
    
 }
-#footer ul{
+footer ul{
     width: 100%;
     list-style-type: none;
 }
-#footer li{
+footer li{
     width: 25%;
     float:  left;    
 }     
-#footer li a:hover{
+footer li a:hover{
     color: #000;
     background-color:whitesmoke;
 }
-#footer li a{
+footer li a{
     color:#333
 
 }
